[package]
name = "aes_cipher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
eframe = { version = "0.27.2", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
hex = "0.4"
native-dialog = "0.7.0"
